[package]
name = "keybased"
version = "0.1.0"
edition = "2021"

[dependencies]
snow = { version = "0.9.6", optional = true }
tokio = { version = "1.41.1", features = ["sync"] }
zenoh = { version = "1.0.3", optional = true, features = ["unstable"] }
lazy_static = "1.5.0"
rand = "0.8.5"
strum_macros = "0.26.4"
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = "4.5.21"

[features]
default = ["zenoh"]
noise = ["dep:snow"]
noise-ring = ["noise", "snow/ring-accelerated"]
zenoh = ["dep:zenoh"]
nigthly = ["rand/simd_support", "snow?/nightly"]
