[package]
name = "samp"
version = "0.1.0"
edition = "2021"

[dependencies]
zenoh = "1"
tokio = { version = "1.40.0" , features = ["sync"]}
strum_macros = "0.26.4"
rand = "0.8.5"
crossterm_cursor = "0.4.0"
leapfrog = { version = "0.3.0", features = ["stable_alloc"] }

[dev-dependencies]
clippy = "0.0.302"
