[package]
name = "samp"
version = "0.2.0"
edition = "2021"

[dependencies]
snow = { version = "0.9.6", optional = true }
tokio = { version = "1.41.1", features = ["sync"] }
zenoh = { version = "1.0.3", optional = true, features = ["unstable"] }
lazy_static = "1.5.0"
rand = "0.8.5"
strum_macros = "0.26.4"
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = "4.5.21"

[features]
default = ["zenoh"]
noise = ["dep:snow"]
noise-ring = ["noise", "snow/ring-accelerated"]
zenoh = ["dep:zenoh"]
nigthly = ["rand/simd_support", "snow?/nightly"]

[[bin]]
name = "pub"
required-features = ["zenoh"]
[[bin]]
name = "req"
required-features = ["zenoh"]
[[bin]]
name = "sub"
required-features = ["zenoh"]
[[bin]]
name = "sub_store_hash"
required-features = ["zenoh"]
[[bin]]
name = "sub_store_nums"
required-features = ["zenoh"]

[[bin]]
name = "noise_simple"
required-features = ["noise"]

[[bin]]
name = "znoise_client"
required-features = ["zenoh", "noise"]

[[bin]]
name = "znoise_server"
required-features = ["zenoh", "noise"]
